ax/.gui/new_share/shares/s3811141/test_wronggoing_stuff/0/1333808_0_log.out
submitit INFO (2025-02-04 08:58:55,126) - Starting with JobEnvironment(job_id=1333808, hostname=arbeitsrechner, local_rank=0(1), node=0(1), global_rank=0(1))
submitit INFO (2025-02-04 08:58:55,127) - Loading pickle: /home/s3811141/repos/OmniOpt/ax/runs/test_wronggoing_stuff/0/single_runs/1333808/1333808_submitted.pkl
Error at execution of your program: ./.tests/test_wronggoing_stuff.bin/bin/syntax_error. Exit-Code: 1, Signal-Code: None
No stdout
stderr:   File "/home/s3811141/repos/OmniOpt/ax/./.tests/test_wronggoing_stuff.bin/bin/syntax_error", line 3
    def x () {}
             ^
SyntaxError: expected ':'

Parameters: {"program": "syntax_error"}
Debug-Infos: 
========
DEBUG INFOS START:
Program-Code: ./.tests/test_wronggoing_stuff.bin/bin/syntax_error
pwd: /home/s3811141/repos/OmniOpt/ax
File: ./.tests/test_wronggoing_stuff.bin/bin/syntax_error
UID: 1000
GID: 1000
Status-Change-Time: 1710134182.2937162
Size: 31 Bytes
Permissions: -rwxr-xr-x
Owner: s3811141
Last access: 1738651829.0453262
Last modification: 1710134182.2937162
Hostname: arbeitsrechner
========
DEBUG INFOS END

./.tests/test_wronggoing_stuff.bin/bin/syntax_error
stdout was empty
stderr:   File "/home/s3811141/repos/OmniOpt/ax/./.tests/test_wronggoing_stuff.bin/bin/syntax_error", line 3
    def x () {}
             ^
SyntaxError: expected ':'

Result: None
EXIT_CODE: 1
submitit INFO (2025-02-04 08:58:58,082) - Job completed successfully
submitit INFO (2025-02-04 08:58:58,082) - Exiting after successful completion
